build: Use the new openjfx javafxplugin