@@ -1,16 +1,6 @@
 import java.time.format.DateTimeFormatter
 import java.time.ZoneId
 
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'com.google.gradle', name: 'osdetector-gradle-plugin', version: '1.6.0'
-        classpath group: 'org.javamodularity', name: 'moduleplugin', version: '1.1.1'
-    }
-}
-
 plugins {
     id 'java'
     id 'eclipse'
@@ -18,10 +8,10 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id "com.diffplug.gradle.spotless" version "3.15.0"
+    id 'org.openjfx.javafxplugin' version '0.0.5'
 }
 
-apply plugin: 'com.google.osdetector'
-//apply plugin: "org.javamodularity.moduleplugin"
+apply(from: rootProject.file('spotless.gradle'))
 
 final Date date = new Date()
 final def buildDateFormatter = DateTimeFormatter.ofPattern("yyyy.MM.dd HH:mm:ss")
@@ -41,56 +31,52 @@ ext {
         applicationVersion = project.getProperty("tagVersion")
         applicationRelease = project.getProperty("tagRelease")
     }
-
-    platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
-
-    moduleName = "no.smeaworks.movies"
 }
 
-mainClassName = "no.smeaworks.movies.MoviesApplication"
-
-apply from: rootProject.file('spotless.gradle')
-apply from: rootProject.file('modules.gradle')
+mainClassName = "$moduleName/no.smeaworks.movies.MoviesApplication"
 
 repositories {
     mavenCentral()
 }
 
-final def openjfxGroup = "org.openjfx"
-final def openjfxVersion = "11.0.1"
+javafx {
+    version = "11.0.+"
+
+    modules = [
+        'javafx.graphics',
+        'javafx.controls',
+        'javafx.media',
+        'javafx.web',
+        'javafx.fxml'
+    ]
+}
 
 final def log4jGroup = 'org.apache.logging.log4j'
 final def log4jVersion = '2.11.1'
 
 final def junitJupiterGroup = 'org.junit.jupiter'
-final def junitJupiterVersion = '5.3.1'
+final def junitJupiterVersion = '5.3.2'
 
 final def junitPlatformGroup = 'org.junit.platform'
-final def junitPlatformVersion = '1.3.0'
+final def junitPlatformVersion = '1.3.2'
 
 final def textfxGroup = "org.testfx"
-final def textfxVersion = "4.0.14-alpha"
+final def textfxVersion = "4.0.15-alpha"
 dependencies {
-    compile group: openjfxGroup, name: "javafx-base", version: openjfxVersion, classifier: platform
-    compile group: openjfxGroup, name: "javafx-graphics", version: openjfxVersion, classifier: platform
-    compile group: openjfxGroup, name: "javafx-controls", version: openjfxVersion, classifier: platform
-    compile group: openjfxGroup, name: "javafx-media", version: openjfxVersion, classifier: platform
-    compile group: openjfxGroup, name: "javafx-web", version: openjfxVersion, classifier: platform
-    compile group: openjfxGroup, name: "javafx-fxml", version: openjfxVersion, classifier: platform
+    //implementation(group: 'org.controlsfx', name: 'controlsfx', version: '9.0.8')
+    //implementation(group: 'com.jfoenix', name: 'jfoenix', version: '9.0.8')
 
-    compile group: log4jGroup, name: 'log4j-api', version: log4jVersion
-    compile group: log4jGroup, name: 'log4j-core', version: log4jVersion
-    compile group: 'com.lmax', name: 'disruptor', version:'3.3.7'
+    implementation(group: log4jGroup, name: 'log4j-api', version: log4jVersion)
+    implementation(group: log4jGroup, name: 'log4j-core', version: log4jVersion)
+    implementation(group: 'com.lmax', name: 'disruptor', version:'3.3.7')
 
-    testCompile group: junitJupiterGroup, name: 'junit-jupiter-api', version: junitJupiterVersion
-    testRuntime group: junitJupiterGroup, name: 'junit-jupiter-engine', version: junitJupiterVersion
-    testRuntime group: junitJupiterGroup, name: 'junit-jupiter-params', version: junitJupiterVersion
+    testImplementation(group: junitJupiterGroup, name: 'junit-jupiter-api', version: junitJupiterVersion)
+    testRuntimeOnly(group: junitJupiterGroup, name: 'junit-jupiter-engine', version: junitJupiterVersion)
+    testRuntimeOnly(group: junitJupiterGroup, name: 'junit-jupiter-params', version: junitJupiterVersion)
 
-    testRuntimeOnly group: junitPlatformGroup, name: 'junit-platform-launcher', version: junitPlatformVersion
-
-    testCompile group: textfxGroup, name: "testfx-core", version: textfxVersion
-    testCompile group: textfxGroup, name: "testfx-junit5", version: textfxVersion
-    testCompile group: textfxGroup, name: "openjfx-monocle", version: "jdk-11+26"
+    testImplementation(group: textfxGroup, name: "testfx-core", version: textfxVersion)
+    testImplementation(group: textfxGroup, name: "testfx-junit5", version: textfxVersion)
+    testImplementation(group: textfxGroup, name: "openjfx-monocle", version: "jdk-11+26")
 }
 
 jar {
@@ -114,23 +100,6 @@ jar {
     }
 }
 
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives jar
-    archives sourcesJar
-    archives javadocJar
-}
-
 test {
     useJUnitPlatform()
 
@@ -140,7 +109,7 @@ test {
 }
 
 checkstyle {
-    toolVersion '8.11'
+    toolVersion '8.14'
 }
 
 jacoco {
@@ -153,27 +122,33 @@ jacocoTestReport {
     }
 }
 
-javadoc {
-    doFirst {
-        options.addBooleanOption('html5', true)
-    }
-}
-
-task createInstaller(type: Exec) {
+task createRuntime(type: Exec) {
     dependsOn installDist
 
-    commandLine '/usr/java/jpackager/jpackager', 'create-image',
+    inputs.dir(installDist.outputs.files.singleFile)
+    outputs.dir("${buildDir}/runtime")
+
+    doFirst {
+        delete "${buildDir}/runtime"
+    }
+
+    def libDir = new File(installDist.outputs.files.singleFile, "lib").path
+
+    commandLine 'jlink',
+        '--module-path', "/usr/java/jdk-11/jmods:${libDir}",
+        '--add-modules', 'no.smeaworks.movies',
+        '--output', "${buildDir}/runtime"
+}
+
+task createPackage(type: Exec) {
+    dependsOn createRuntime
+
+    commandLine 'jpackage', 'create-image',
         '--verbose',
-        '--echo-mode',
+        '--force',
         '--name', project.name,
-        '--version', applicationVersion,
-        '--description', project.description,
-        '--vendor', "Smeaworks Inc",
-        '--install-dir', "/opt/smeaworks",
-        '--category', "Some/Category/Application",
-        '--module-path', new File(installDist.outputs.files.singleFile, "lib"),
-        '--module', "${moduleName}/${mainClassName}",
-        "--linux-rpm-license-type", "Commercial",
-        "--linux-deb-maintainer", "Smeaworks Inc <sverre.moe@gmail.com>",
-        '--output', "$buildDir/jfx/native"
+        '--app-version', applicationVersion,
+        '--module', "${mainClassName}",
+        '--runtime-image', "${buildDir}/runtime",
+        '--output', "${buildDir}/native"
 }
